; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-mips-cpu.c_mips_mt_cpu_irq_startup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-mips-cpu.c_mips_mt_cpu_irq_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }

@C_SW0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.irq_data*)* @mips_mt_cpu_irq_startup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mips_mt_cpu_irq_startup(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca i32, align 4
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %4 = call i32 (...) @dvpe()
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* @C_SW0, align 4
  %6 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %7 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = shl i32 %5, %8
  %10 = call i32 @clear_c0_cause(i32 %9)
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @evpe(i32 %11)
  %13 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %14 = call i32 @unmask_mips_irq(%struct.irq_data* %13)
  ret i32 0
}

declare dso_local i32 @dvpe(...) #1

declare dso_local i32 @clear_c0_cause(i32) #1

declare dso_local i32 @evpe(i32) #1

declare dso_local i32 @unmask_mips_irq(%struct.irq_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
